testsuite/tests/indexed-types/should_compile/T22717d.hs
{-# LANGUAGE TypeFamilies #-}
module T22717d where

type family F a
data T
